[gd_scene load_steps=3 format=2]

[ext_resource path="res://score/ExecutorCS.cs" type="Script" id=1]
[ext_resource path="res://score/Control.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ExecutorCS" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ListaPontuacao" type="ItemList" parent="."]
margin_right = 320.0
margin_bottom = 191.0

[node name="RegistrarPontos" type="Button" parent="."]
margin_left = 9.0
margin_top = 161.0
margin_right = 77.0
margin_bottom = 181.0
text = "Registrar"

[node name="MostrarPontos" type="Button" parent="."]
margin_left = 206.0
margin_top = 161.0
margin_right = 315.0
margin_bottom = 181.0
text = "Mostrar pontos"

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -71.0
margin_right = 96.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="Panel"]
margin_left = 18.0
margin_top = 20.0
margin_right = 61.0
margin_bottom = 34.0
text = "Nome:"

[node name="Label2" type="Label" parent="Panel"]
margin_left = 18.0
margin_top = 76.0
margin_right = 62.0
margin_bottom = 107.0
text = "Pontos:
"

[node name="Confirmar" type="Button" parent="Panel"]
margin_left = 64.0
margin_top = 102.0
margin_right = 138.0
margin_bottom = 122.0
text = "Confirmar"

[node name="Fechar" type="Button" parent="Panel"]
margin_left = 183.0
margin_top = -7.0
margin_right = 203.0
margin_bottom = 13.0
text = "X"

[node name="Nome" type="LineEdit" parent="Panel"]
margin_left = 68.0
margin_top = 15.0
margin_right = 188.0
margin_bottom = 39.0
text = "Digite um nome"

[node name="Pontos" type="LineEdit" parent="Panel"]
margin_left = 67.0
margin_top = 69.0
margin_right = 189.0
margin_bottom = 93.0
text = "Digite os pontos"

[connection signal="pressed" from="RegistrarPontos" to="." method="_on_RegistrarPontos_pressed"]
[connection signal="pressed" from="MostrarPontos" to="." method="_on_MostrarPontos_pressed"]
[connection signal="pressed" from="Panel/Confirmar" to="." method="_on_Confirmar_pressed"]
[connection signal="pressed" from="Panel/Fechar" to="." method="_on_Fechar_pressed"]
